--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 /* Especificaciones iniciales para el body */
 html {
     font-size: 16px;
+    box-sizing: border-box;
 }
 body{
     padding: 0%;
@@ -8,10 +9,7 @@ body{
     font-family: 'Be Vietnam Pro', sans-serif;
     color: #242E52;
     font-weight: 700;
-}
-
-.containerheader__menuhamburguer{
-    display: none;
+    overflow-x: hidden;
 }
 
 .bg__img{
@@ -78,7 +76,18 @@ body{
     background-color: #e89a87;
     color: white;
 }
-    
+
+/* estilos menu hamburguesa responsive */
+#headbtn__menu{
+    display: none;
+}
+.containerheader__menuhamburguer label{
+    display: none;
+}
+.containerheader__menuhamburguer label:hover{
+    cursor: pointer;
+}
+
 /* estilos de seccion principal */
 
 .contaninermain{
@@ -324,14 +333,46 @@ body{
 
 
 @media (max-width:375px){
-    .conteinerheader__menu {
-        display: none;}
 
-    .containerheader__menuhamburguer{
+    /* menu hamburguesa */
+
+    .containerheader__menuhamburguer label{
             display: block;
             padding-left: 150px;
             font-size: 2rem;
     }
+
+    .conteinerheader__menu1{
+        flex-direction: column;
+        position: absolute;
+        margin-left: 70%;
+        background-color: white;
+        transition: all 0.5s;
+    }
+
+    .conteinerheader__menu1 ul{
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .conteinerheader__menu1 li{
+        margin: 20px;
+    }
+
+    #headbtn__menu:checked  ~ .conteinerheader__menu1{
+        margin-left: 0%;
+    }
+
+
+    
+
+
+
+
+
+
+
+
     
     header button {
             display: none;
@@ -387,7 +428,8 @@ body{
     }
 
     .containerflex2__items--lettersmedium{
-        background-color: #f3603b20
+        background-color: #f3603b20;
+        padding: 10px 0;
     }
 
     .containerflex2__items--letterclear{
